working on getting team members from data base and cleaning up the routes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Mint-SEO",
+    "name": "Mint SEO",
     "version": "1.0.0",
     "description": "SEO-Buddy",
     "main": "server.js",
